# kaiforth

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  state.json
.github/workflows/: ci.yml  release.yml
benchmarks/: bench.fs
docs/: execution.md  learning.md  optimizer.md  persistence.md  safety.md
examples/: fib.fs  test_all.fs  test_simple.fs
scratch/: check_arch.rs  check_size.rs
src/: lib.rs  main.rs
src/compiler/: parser.rs
src/core/: error.rs  mod.rs  types.rs
src/jit/: abi.rs  mod.rs  runtime.rs
src/optimizer/: analysis.rs  contract.rs  mod.rs  segmentation.rs
src/system/: system.rs
src/vm/: execution.rs  memory.rs  mod.rs  stack.rs  state.rs
tests/: hardening_test.rs  stress.rs  torture.rs
