[package]
name = "kaiforth"
version = "6.0.0"
edition = "2024"
description = "High-performance Forth VM in safe Rust — packed opcodes, recursive optimizer, zero panics"
license = "MIT"
readme = "README.md"

[[bin]]
name = "kaiforth"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dependencies]
arrayvec = "0.7.6"
memmap2 = "0.9.10"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
libc = "0.2"

[dev-dependencies]
rand = "0.8"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = ["Win32_System_Memory", "Win32_System_Threading"] }
